--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
        uses: appleboy/ssh-action@master
     
        with:
-          host: ${{ secrets.ADDRESS }}
+          host: ${{ secrets.HOST }}
           username: root
           key: ${{secrets.key}}
           script:
