--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,11 @@ jobs:
         node-version: [14.19.0]
     
     steps:
+     - name: My first action
+       env:
+        GITHUB_TOKEN: ${{ secrets.address }}
+        HOST: Mona
+        key: Octoca
                
      - name: Checkout repository
        uses: actions/checkout@v2
@@ -29,9 +34,9 @@ jobs:
        uses: appleboy/ssh-action@master
     
        with:
-          host: ${{secrets.ADDRESS_HOST}}
+          host: ${{secrets.address_HOST}}
           username: root
-          key: ${{secrets.ADDRESS_key}}
+          key: ${{secrets.address_key}}
           port: 22
           script: |
             cd /root/1/
