--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
        with:
           host: ${{ secrets.HOST }}
           username: root
-        
+          key: ${{ secrets.KEY }}
           port: 22
           script: |
             cd /root/1/
